welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:9: error: ';' expected but 'else' found.
  }else{ return nums(0)
   ^